src/components/create/create.css
.createTitle{
    font-size: 200%;
    position:absolute;
    left:37%;
    top:13%;
    font-weight: bolder;
}

.createSearch{
    margin-bottom: 13%;
}

.createTagBox{
    position: absolute;
    top: 24%;
    margin-left: 7%;
    height: 100%;
}

.createTagBox p{
    margin-left: 24%;
    font-size: 150%;
}

.createTagBox textarea{
    width:100%;
    height:42%;
    resize:none;
    text-align: center;
    border-color:brown;
    border-radius: 10px;
}

.clearButton{
    position: absolute;
    bottom:13%;
    left:10.5%;
}

.exercise{
    position: absolute;
    top:27.5%;
    left:35%;
    height:100%;
}

.exercise p{
    font-size: 150%;
    margin-top: 10%;
    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.exercise textarea{
    resize: none;
    text-align: center;
    height: 4.25%;
}

.exerciseButton{
    position: absolute;
    bottom:13%;
    left:35%;
}

.workoutPreviewBox{
    width:30%;
    height:42.2%;
    resize:none;
    text-align: center;
    border-color:brown;
    border-radius: 10px;
    position: absolute;
    left:71%;
    top:8%;
}

.workoutPreview{
    position: absolute;
    right:7%;
    top:27.1%;
    height:100%;
    width: 120%;
}

.workoutPreview p{
    font-size: 125%;
    position: absolute;
    right:23%;
}

.name{
    font-size: 125%;
    position: absolute;
    right:20%;
}

.workoutButton{
    position: absolute;
    bottom:13%;
    right:17.4%;
}

.undoButton{
    position: absolute;
    bottom:13%;
    left:46.5%;
}

.nameInput{
    width:350px;
    height:31px;
    resize: none;
    position: absolute;
    top:3px;
    left:20.5%;
    margin-left: 1%;
}

